// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`process > common.css 1`] = `
{
  "*, ::before, ::after": {
    "--tw-backdrop-blur": " ",
    "--tw-backdrop-brightness": " ",
    "--tw-backdrop-contrast": " ",
    "--tw-backdrop-grayscale": " ",
    "--tw-backdrop-hue-rotate": " ",
    "--tw-backdrop-invert": " ",
    "--tw-backdrop-opacity": " ",
    "--tw-backdrop-saturate": " ",
    "--tw-backdrop-sepia": " ",
    "--tw-blur": " ",
    "--tw-border-spacing-x": "0",
    "--tw-border-spacing-y": "0",
    "--tw-brightness": " ",
    "--tw-contrast": " ",
    "--tw-drop-shadow": " ",
    "--tw-gradient-from-position": " ",
    "--tw-gradient-to-position": " ",
    "--tw-gradient-via-position": " ",
    "--tw-grayscale": " ",
    "--tw-hue-rotate": " ",
    "--tw-invert": " ",
    "--tw-numeric-figure": " ",
    "--tw-numeric-fraction": " ",
    "--tw-numeric-spacing": " ",
    "--tw-ordinal": " ",
    "--tw-pan-x": " ",
    "--tw-pan-y": " ",
    "--tw-pinch-zoom": " ",
    "--tw-ring-color": "rgb(59 130 246 / 0.5)",
    "--tw-ring-inset": " ",
    "--tw-ring-offset-color": "#fff",
    "--tw-ring-offset-shadow": "0 0 #0000",
    "--tw-ring-offset-width": "0px",
    "--tw-ring-shadow": "0 0 #0000",
    "--tw-rotate": "0",
    "--tw-saturate": " ",
    "--tw-scale-x": "1",
    "--tw-scale-y": "1",
    "--tw-scroll-snap-strictness": "proximity",
    "--tw-sepia": " ",
    "--tw-shadow": "0 0 #0000",
    "--tw-shadow-colored": "0 0 #0000",
    "--tw-skew-x": "0",
    "--tw-skew-y": "0",
    "--tw-slashed-zero": " ",
    "--tw-translate-x": "0",
    "--tw-translate-y": "0",
  },
  ".card": {
    "backgroundColor": "#fff",
    "borderRadius": "0.5rem",
    "boxShadow": "0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1)",
    "padding": "1.5rem",
  },
  ".content-auto": {
    "contentVisibility": "\\"auto\\"",
  },
  "::backdrop": {
    "--tw-backdrop-blur": " ",
    "--tw-backdrop-brightness": " ",
    "--tw-backdrop-contrast": " ",
    "--tw-backdrop-grayscale": " ",
    "--tw-backdrop-hue-rotate": " ",
    "--tw-backdrop-invert": " ",
    "--tw-backdrop-opacity": " ",
    "--tw-backdrop-saturate": " ",
    "--tw-backdrop-sepia": " ",
    "--tw-blur": " ",
    "--tw-border-spacing-x": "0",
    "--tw-border-spacing-y": "0",
    "--tw-brightness": " ",
    "--tw-contrast": " ",
    "--tw-drop-shadow": " ",
    "--tw-gradient-from-position": " ",
    "--tw-gradient-to-position": " ",
    "--tw-gradient-via-position": " ",
    "--tw-grayscale": " ",
    "--tw-hue-rotate": " ",
    "--tw-invert": " ",
    "--tw-numeric-figure": " ",
    "--tw-numeric-fraction": " ",
    "--tw-numeric-spacing": " ",
    "--tw-ordinal": " ",
    "--tw-pan-x": " ",
    "--tw-pan-y": " ",
    "--tw-pinch-zoom": " ",
    "--tw-ring-color": "rgb(59 130 246 / 0.5)",
    "--tw-ring-inset": " ",
    "--tw-ring-offset-color": "#fff",
    "--tw-ring-offset-shadow": "0 0 #0000",
    "--tw-ring-offset-width": "0px",
    "--tw-ring-shadow": "0 0 #0000",
    "--tw-rotate": "0",
    "--tw-saturate": " ",
    "--tw-scale-x": "1",
    "--tw-scale-y": "1",
    "--tw-scroll-snap-strictness": "proximity",
    "--tw-sepia": " ",
    "--tw-shadow": "0 0 #0000",
    "--tw-shadow-colored": "0 0 #0000",
    "--tw-skew-x": "0",
    "--tw-skew-y": "0",
    "--tw-slashed-zero": " ",
    "--tw-translate-x": "0",
    "--tw-translate-y": "0",
  },
  "h1": {
    "fontSize": "1.5rem",
  },
  "h2": {
    "fontSize": "1.25rem",
  },
}
`;

exports[`process > common.css 2`] = `
"*, ::before, ::after {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}

::backdrop {
    --tw-border-spacing-x: 0;
    --tw-border-spacing-y: 0;
    --tw-translate-x: 0;
    --tw-translate-y: 0;
    --tw-rotate: 0;
    --tw-skew-x: 0;
    --tw-skew-y: 0;
    --tw-scale-x: 1;
    --tw-scale-y: 1;
    --tw-pan-x:  ;
    --tw-pan-y:  ;
    --tw-pinch-zoom:  ;
    --tw-scroll-snap-strictness: proximity;
    --tw-gradient-from-position:  ;
    --tw-gradient-via-position:  ;
    --tw-gradient-to-position:  ;
    --tw-ordinal:  ;
    --tw-slashed-zero:  ;
    --tw-numeric-figure:  ;
    --tw-numeric-spacing:  ;
    --tw-numeric-fraction:  ;
    --tw-ring-inset:  ;
    --tw-ring-offset-width: 0px;
    --tw-ring-offset-color: #fff;
    --tw-ring-color: rgb(59 130 246 / 0.5);
    --tw-ring-offset-shadow: 0 0 #0000;
    --tw-ring-shadow: 0 0 #0000;
    --tw-shadow: 0 0 #0000;
    --tw-shadow-colored: 0 0 #0000;
    --tw-blur:  ;
    --tw-brightness:  ;
    --tw-contrast:  ;
    --tw-grayscale:  ;
    --tw-hue-rotate:  ;
    --tw-invert:  ;
    --tw-saturate:  ;
    --tw-sepia:  ;
    --tw-drop-shadow:  ;
    --tw-backdrop-blur:  ;
    --tw-backdrop-brightness:  ;
    --tw-backdrop-contrast:  ;
    --tw-backdrop-grayscale:  ;
    --tw-backdrop-hue-rotate:  ;
    --tw-backdrop-invert:  ;
    --tw-backdrop-opacity:  ;
    --tw-backdrop-saturate:  ;
    --tw-backdrop-sepia:  ;
}

h1 {
    font-size: 1.5rem;
  }

h2 {
    font-size: 1.25rem;
  }

.card {
    background-color: #fff;
    border-radius: 0.5rem;
    padding: 1.5rem;
    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
  }

.content-auto {
    content-visibility: \\"auto\\";
  }
"
`;

exports[`process > common.css only extract layer 1`] = `
{
  ".card": {
    "backgroundColor": "theme(\\"colors.white\\")",
    "borderRadius": "theme(\\"borderRadius.lg\\")",
    "boxShadow": "theme(\\"boxShadow.xl\\")",
    "padding": "theme(\\"spacing.6\\")",
  },
  ".content-auto": {
    "contentVisibility": "\\"auto\\"",
  },
  "@tailwind base": true,
  "@tailwind components": true,
  "@tailwind utilities": true,
  "h1": {
    "fontSize": "theme(\\"fontSize.2xl\\")",
  },
  "h2": {
    "fontSize": "theme(\\"fontSize.xl\\")",
  },
}
`;

exports[`process > common.css only extract layer 2`] = `
"@tailwind base;
@tailwind components;
@tailwind utilities;

h1 {
    font-size: theme(\\"fontSize.2xl\\");
  }

h2 {
    font-size: theme(\\"fontSize.xl\\");
  }

.card {
    background-color: theme(\\"colors.white\\");
    border-radius: theme(\\"borderRadius.lg\\");
    padding: theme(\\"spacing.6\\");
    box-shadow: theme(\\"boxShadow.xl\\");
  }

.content-auto {
    content-visibility: \\"auto\\";
  }
"
`;

exports[`process > default.css 1`] = `
{
  "*,
::before,
::after": {
    "borderColor": "theme(\\"borderColor.DEFAULT\\", currentColor)",
    "borderStyle": "solid",
    "borderWidth": "0",
    "boxSizing": "border-box",
  },
  ":-moz-focusring": {
    "outline": "auto",
  },
  ":-moz-ui-invalid": {
    "boxShadow": "none",
  },
  "::-webkit-file-upload-button": {
    "WebkitAppearance": "button",
    "font": "inherit",
  },
  "::-webkit-inner-spin-button,
::-webkit-outer-spin-button": {
    "height": "auto",
  },
  "::-webkit-search-decoration": {
    "WebkitAppearance": "none",
  },
  "::before,
::after": {
    "--tw-content": "\\"\\"",
  },
  ":disabled": {
    "cursor": "default",
  },
  "[hidden]": {
    "display": "none",
  },
  "[type=\\"search\\"]": {
    "WebkitAppearance": "textfield",
    "outlineOffset": "-2px",
  },
  "a": {
    "color": "inherit",
    "textDecoration": "inherit",
  },
  "abbr:where([title])": {
    "textDecoration": "underline dotted",
  },
  "b,
strong": {
    "fontWeight": "bolder",
  },
  "blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre": {
    "margin": "0",
  },
  "body": {
    "lineHeight": "inherit",
    "margin": "0",
  },
  "button,
[role=\\"button\\"]": {
    "cursor": "pointer",
  },
  "button,
[type=\\"button\\"],
[type=\\"reset\\"],
[type=\\"submit\\"]": {
    "WebkitAppearance": "button",
    "backgroundColor": "transparent",
    "backgroundImage": "none",
  },
  "button,
input,
optgroup,
select,
textarea": {
    "color": "inherit",
    "fontFamily": "inherit",
    "fontFeatureSettings": "inherit",
    "fontSize": "100%",
    "fontVariationSettings": "inherit",
    "fontWeight": "inherit",
    "lineHeight": "inherit",
    "margin": "0",
    "padding": "0",
  },
  "button,
select": {
    "textTransform": "none",
  },
  "code,
kbd,
samp,
pre": {
    "fontFamily": "theme(
    \\"fontFamily.mono\\",
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    \\"Liberation Mono\\",
    \\"Courier New\\",
    monospace
  )",
    "fontSize": "1em",
  },
  "dialog": {
    "padding": "0",
  },
  "fieldset": {
    "margin": "0",
    "padding": "0",
  },
  "h1,
h2,
h3,
h4,
h5,
h6": {
    "fontSize": "inherit",
    "fontWeight": "inherit",
  },
  "hr": {
    "borderTopWidth": "1px",
    "color": "inherit",
    "height": "0",
  },
  "html": {
    "MozTabSize": "4",
    "WebkitTextSizeAdjust": "100%",
    "fontFamily": "theme(
    \\"fontFamily.sans\\",
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    \\"Segoe UI\\",
    Roboto,
    \\"Helvetica Neue\\",
    Arial,
    \\"Noto Sans\\",
    sans-serif,
    \\"Apple Color Emoji\\",
    \\"Segoe UI Emoji\\",
    \\"Segoe UI Symbol\\",
    \\"Noto Color Emoji\\"
  )",
    "fontFeatureSettings": "theme(\\"fontFamily.sans[1].fontFeatureSettings\\", normal)",
    "fontVariationSettings": "theme(\\"fontFamily.sans[1].fontVariationSettings\\", normal)",
    "lineHeight": 1.5,
    "tabSize": 4,
  },
  "img,
svg,
video,
canvas,
audio,
iframe,
embed,
object": {
    "display": "block",
    "verticalAlign": "middle",
  },
  "img,
video": {
    "height": "auto",
    "maxWidth": "100%",
  },
  "input::placeholder,
textarea::placeholder": {
    "color": "theme(\\"colors.gray.400\\", #9ca3af)",
    "opacity": 1,
  },
  "legend": {
    "padding": "0",
  },
  "ol,
ul,
menu": {
    "listStyle": "none",
    "margin": "0",
    "padding": "0",
  },
  "progress": {
    "verticalAlign": "baseline",
  },
  "small": {
    "fontSize": "80%",
  },
  "sub": {
    "bottom": "-0.25em",
  },
  "sub,
sup": {
    "fontSize": "75%",
    "lineHeight": 0,
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": {
    "display": "list-item",
  },
  "sup": {
    "top": "-0.5em",
  },
  "table": {
    "borderCollapse": "collapse",
    "borderColor": "inherit",
    "textIndent": "0",
  },
  "textarea": {
    "resize": "vertical",
  },
}
`;

exports[`process > default.scss 1`] = `
{
  "*,
::before,
::after": {
    "borderColor": "theme(\\"borderColor.DEFAULT\\", currentColor)",
    "borderStyle": "solid",
    "borderWidth": "0",
    "boxSizing": "border-box",
  },
  ":-moz-focusring": {
    "outline": "auto",
  },
  ":-moz-ui-invalid": {
    "boxShadow": "none",
  },
  "::-webkit-file-upload-button": {
    "WebkitAppearance": "button",
    "font": "inherit",
  },
  "::-webkit-inner-spin-button,
::-webkit-outer-spin-button": {
    "height": "auto",
  },
  "::-webkit-search-decoration": {
    "WebkitAppearance": "none",
  },
  "::before,
::after": {
    "--tw-content": "\\"\\"",
  },
  ":disabled": {
    "cursor": "default",
  },
  "[hidden]": {
    "display": "none",
  },
  "[type=search]": {
    "WebkitAppearance": "textfield",
    "outlineOffset": "-2px",
  },
  "a": {
    "color": "inherit",
    "textDecoration": "inherit",
  },
  "abbr:where([title])": {
    "textDecoration": "underline dotted",
  },
  "b,
strong": {
    "fontWeight": "bolder",
  },
  "blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre": {
    "margin": "0",
  },
  "body": {
    "lineHeight": "inherit",
    "margin": "0",
  },
  "button,
[role=button]": {
    "cursor": "pointer",
  },
  "button,
[type=button],
[type=reset],
[type=submit]": {
    "WebkitAppearance": "button",
    "backgroundColor": "transparent",
    "backgroundImage": "none",
  },
  "button,
input,
optgroup,
select,
textarea": {
    "color": "inherit",
    "fontFamily": "inherit",
    "fontFeatureSettings": "inherit",
    "fontSize": "100%",
    "fontVariationSettings": "inherit",
    "fontWeight": "inherit",
    "lineHeight": "inherit",
    "margin": "0",
    "padding": "0",
  },
  "button,
select": {
    "textTransform": "none",
  },
  "code,
kbd,
samp,
pre": {
    "fontFamily": "theme(\\"fontFamily.mono\\", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \\"Liberation Mono\\", \\"Courier New\\", monospace)",
    "fontSize": "1em",
  },
  "dialog": {
    "padding": "0",
  },
  "fieldset": {
    "margin": "0",
    "padding": "0",
  },
  "h1,
h2,
h3,
h4,
h5,
h6": {
    "fontSize": "inherit",
    "fontWeight": "inherit",
  },
  "hr": {
    "borderTopWidth": "1px",
    "color": "inherit",
    "height": "0",
  },
  "html": {
    "MozTabSize": "4",
    "WebkitTextSizeAdjust": "100%",
    "fontFamily": "theme(\\"fontFamily.sans\\", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, \\"Noto Sans\\", sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\", \\"Noto Color Emoji\\")",
    "fontFeatureSettings": "theme(\\"fontFamily.sans[1].fontFeatureSettings\\", normal)",
    "fontVariationSettings": "theme(\\"fontFamily.sans[1].fontVariationSettings\\", normal)",
    "lineHeight": 1.5,
    "tabSize": 4,
  },
  "img,
svg,
video,
canvas,
audio,
iframe,
embed,
object": {
    "display": "block",
    "verticalAlign": "middle",
  },
  "img,
video": {
    "height": "auto",
    "maxWidth": "100%",
  },
  "input::placeholder,
textarea::placeholder": {
    "color": "theme(\\"colors.gray.400\\", #9ca3af)",
    "opacity": 1,
  },
  "legend": {
    "padding": "0",
  },
  "ol,
ul,
menu": {
    "listStyle": "none",
    "margin": "0",
    "padding": "0",
  },
  "progress": {
    "verticalAlign": "baseline",
  },
  "small": {
    "fontSize": "80%",
  },
  "sub": {
    "bottom": "-0.25em",
  },
  "sub,
sup": {
    "fontSize": "75%",
    "lineHeight": 0,
    "position": "relative",
    "verticalAlign": "baseline",
  },
  "summary": {
    "display": "list-item",
  },
  "sup": {
    "top": "-0.5em",
  },
  "table": {
    "borderCollapse": "collapse",
    "borderColor": "inherit",
    "textIndent": "0",
  },
  "textarea": {
    "resize": "vertical",
  },
}
`;
